--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Page Title</title>
+        <title>Jae Smith</title>
     </head>
     <body>
-        <p>text.</p>
+        <h2>Jae Smith</h2>
+        <ul>
+            <li>Hometown: Vienna, VA</li>
+            <li>School: UVA</li>
+            <li>Hobbies: Violin, Games, Muay Thai</li>
+            <li>Pets: A dog named Cookie</li>
+            <li>Favorite Foods: Pizza</li>
+        </ul>
+        <img src ="img/yoda.jpg" alt="babyyoda"/>
+        <a href="https://joinforge.co/" target="_blank"> Forge's Website</a>
     </body>
 </html>
